--- a/src/prototipogym/view/mantenimientos/ManClientes.form
+++ b/src/prototipogym/view/mantenimientos/ManClientes.form
@@ -72,16 +72,16 @@
                               <Component id="etiqueta" alignment="0" min="-2" pref="77" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="Text_ID" max="32767" attributes="0"/>
-                              <Component id="TextNombre" max="32767" attributes="0"/>
-                              <Component id="TextPapellido" max="32767" attributes="0"/>
-                              <Component id="TextSapellido" max="32767" attributes="0"/>
-                              <Component id="TextDireccion" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="Text_ID" alignment="0" pref="170" max="32767" attributes="0"/>
+                              <Component id="TextNombre" alignment="0" max="32767" attributes="0"/>
+                              <Component id="TextPapellido" alignment="0" max="32767" attributes="0"/>
+                              <Component id="TextSapellido" alignment="0" max="32767" attributes="0"/>
+                              <Component id="TextDireccion" alignment="0" max="32767" attributes="0"/>
                               <Component id="TextTelefono" alignment="0" max="32767" attributes="0"/>
-                              <Component id="ButtonGuardar" min="-2" pref="90" max="-2" attributes="0"/>
+                              <Component id="ButtonGuardar" alignment="0" min="-2" pref="90" max="-2" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="Chooser" min="-2" pref="102" max="-2" attributes="0"/>
+                                  <Component id="Chooser" max="32767" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="TextFechaNac" min="-2" pref="62" max="-2" attributes="0"/>
                               </Group>
